--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             Vokalia and
                             Conson</p>
 
-                        <a href="#" class="text-center text-blue-500">Learn More</a>
+                        <a href="#" class="text-center text-blue-500">Read More</a>
                     </div>
 
 
