--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
                     <div class=" flex flex-col justify-center   ">
                         <img src="column-icon-3.png" alt="Image" class=" m-auto">
-                        <h1 class="font-bold text-lg text-center">Powerful Framework</h1>
+                        <h1 class="font-bold text-lg text-center">most powerful Framework</h1>
                         <p class="text-center text-base text-[#9b9b9b] my-3">Far far away, behind
                             the word mountains, far
                             from the
