--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             the word mountains, far
                             from the
                             countries
-                            Vokalia and
+                            Vokalia a
                             Conson</p>
 
                         <a href="#" class="text-center text-blue-500">Learn More</a>
